# bootstrap-percolation

./: .gitignore  README.md  bootstrap-percolation.cabal
app/: Main.hs
bench/: MainBench.hs
src/: BootstrapPercolation.hs  DagAlgo.hs  GraphExt.hs  IndependentSet.hs  MinimalContagious.hs  MinimalContagiousMemo.hs  ReichmanAlgo.hs
test/: BootstrapPercolationTest.hs  MinimalContagiousMemoTest.hs  MinimalContagiousTest.hs
web/: MainWeb.hs
